update:优化泛型数据获取及基础服务